                - The field 'Activity.floating_type' got some light changes.
                  It's now a 'PositiveSmallIntegerField', it has an attribute 'choices' & it's viewable.
                - Some small changes have been made in the class 'views.buttons.UnsuccessfulPhoneCallCreation'.
            * Reports :
                - In the field 'report.Field.name', the CustomFields are referenced by their UUID now (see types 'RFT_CUSTOM' & 'RFT_AGG_CUSTOM').
            * Billing :
                - The class 'actions.GenerateNumberAction' has been removed (use '_GenerateNumberAction' instead).
                - In the brick classes 'CreditNotesBrick' & 'Received*Brick',
                  the variable "hidden_fields" is not injected anymore.
                - In 'buttons' :
                    - The class 'GenerateInvoiceNumberButton' has been removed (use 'GenerateNumberButton' instead).
                    - The class '_ConvertToButton' (& so, the child classes) has been reworked.
                        - It injects a string "error" in the context.
                        - "creation_perm" is not injected in the template anymore.
                        - The attribute 'target_modelname' has been removed.
                  The template has been modified, of course.
                - In 'core' :
                    - These variables have been removed : CLASS_MAP, CONVERT_MATRIX, RTYPE_MATRIX.
                    - The function 'get_models_for_conversion()' has been removed.
                - The attribute 'forms.base.BaseCustomForm.old_user_id' has been removed.
                - In 'registry' :
                    - The classes 'Algo' & 'AlgoRegistry' have been removed; see the new method
                      'apps.BillingConfig.register_billing_number_generators()' to know how to create/register a number generator.
                    - The class 'RelationTypeConverterRegistry' & the variable 'relationtype_converter'